<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultClassificationActivity">

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="364dp"
        android:layout_height="400dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tv_type_of_soil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_soil"
        android:layout_marginTop="55dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_result"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_result_soil_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        tools:text="@string/aluvial_soil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_of_soil"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_prediction_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prediction_accuracy"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_soil_name"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        tools:text="@string/accuracy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_prediction_accuracy"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_back_home"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:text="@string/back_home"
        android:textColor="@color/black"
        android:backgroundTint="@color/green_primary"
        app:layout_constraintTop_toBottomOf="@+id/tv_accuracy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_result"
        app:layout_constraintVertical_bias="0.336" />

</androidx.constraintlayout.widget.ConstraintLayout>