<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SoilDetailActivity"
    android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_soil"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="48dp"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/soil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_of_soil"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_soil"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_soil_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:text="@string/aluvial_soil"
                app:layout_constraintTop_toBottomOf="@+id/soil"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/description_soil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_result"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_soil_name"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_soil_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="16dp"
                android:text="@string/aluvial_soil_is"
                app:layout_constraintTop_toBottomOf="@+id/description_soil"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/recommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendation"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_soil_desc"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_plant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommendation"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>