<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutus.AboutUsActivity">


    <?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="628dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvtext1"
            android:layout_width="wrap_content"
            android:layout_height="152dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="437dp"
            android:text="@string/text1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvtext2"
            android:layout_width="wrap_content"
            android:layout_height="152dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="280dp"
            android:text="@string/text2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>